#62: Spartanized the entire project again